PullRequest: 115 update Makefile and README.md
Merge branch 'update_makefile_and_readme of git@code.alipay.com:octopus/vsag.git into master

https://code.alipay.com/octopus/vsag/pull_requests/115


Signed-off-by: 贾玮 <jw94525@antgroup.com>
Signed-off-by: 余羡 <jinjiabao.jjb@antgroup.com>


* update Makefile and README.md

--- a/.aci.yml
+++ b/.aci.yml
@@ -29,7 +29,7 @@ format-pre-check:
         image: ${image}
         command:
         - |
-          make format
+          make fmt
           if [[ -n $(git status --porcelain) ]]; then
               exit 1
           fi
