--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -115,6 +115,7 @@ if (ENABLE_TESTS)
 	tests/test_random_index.cpp
 	tests/test_cpuinfo.cpp
 	tests/test_simd.cpp
+    tests/test_option.cpp
     )
     target_include_directories(tests PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/spdlog/install/include)
     target_link_libraries (tests PRIVATE Catch2::Catch2WithMain vsag simd)
