PullRequest: 119 refactor error handling
Merge branch 'add_error_messages of git@code.alipay.com:octopus/vsag.git into master

https://code.alipay.com/octopus/vsag/pull_requests/119


Signed-off-by: 贾玮 <jw94525@antgroup.com>
Signed-off-by: 余羡 <jinjiabao.jjb@antgroup.com>


* add error messages

* update

* update

* format codes

* update

* update

* update

* update

* update

* format codes

--- a/.aci.yml
+++ b/.aci.yml
@@ -64,6 +64,7 @@ vsag_build_ut_cov:
           # compile
           export PATH=/usr/lib/ccache:$PATH
           export GTEST_OUTPUT="xml:$(pwd)/vsag/testresult/gtest/"
+          bash scripts/deps/install_deps_centos.sh
           make test_cov
           bash scripts/aci/collect_cpp_coverage.sh
     - plugin: coverage-client-upload-compass
