--- a/benchs/run.yaml
+++ b/benchs/run.yaml
@@ -21,10 +21,10 @@ index_test:
           dtype: float32
           metric_type: l2
           build:
-            M: 32
+            max_degree: 32
             ef_construction: 500
           search:
-            ef_runtime: 300
+            ef_search: 300
     query:
       query_size: 1000
       knn:
