PullRequest: 131 add build and search parameter check function
Merge branch 'add_parameter_check_function of git@code.alipay.com:octopus/vsag.git into master

https://code.alipay.com/octopus/vsag/pull_requests/131


Signed-off-by: 贾玮 <jw94525@antgroup.com>
Signed-off-by: 余羡 <jinjiabao.jjb@antgroup.com>


* add build and search parameter check function

* update

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -121,6 +121,7 @@ if (ENABLE_TESTS)
 	tests/test_random_index.cpp
 	tests/test_cpuinfo.cpp
 	tests/test_simd.cpp
+	tests/test_index.cpp
     tests/test_option.cpp
     )
     target_include_directories(tests PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/spdlog/install/include)
