PullRequest: 135 Added multithreading unit tests, removed the locks in bitset during set and get operations.
Merge branch muti-thread of git@code.alipay.com:octopus/vsag.git into master
https://code.alipay.com/octopus/vsag/pull_requests/135

Signed-off-by: 贾玮 <jw94525@antgroup.com>
Signed-off-by: 祥予 <wxy407827@antgroup.com>


* modify

* modify

* modify

* modify

* modify

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,6 +123,7 @@ if (ENABLE_TESTS)
 	tests/test_simd.cpp
 	tests/test_index.cpp
     tests/test_option.cpp
+    tests/test_multi_thread.cpp
     )
     target_include_directories(tests PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/spdlog/install/include)
     target_link_libraries (tests PRIVATE Catch2::Catch2WithMain vsag simd)
