PullRequest: 140 export static library
Merge branch 'export_static_library of git@code.alipay.com:octopus/vsag.git into master

https://code.alipay.com/octopus/vsag/pull_requests/140


Signed-off-by: 贾玮 <jw94525@antgroup.com>
Signed-off-by: 余羡 <jinjiabao.jjb@antgroup.com>


* export static library

* update

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,7 +90,9 @@ list (FILTER CPP_SRCS EXCLUDE REGEX "_test.cpp")
 list (FILTER CPP_FACTORY_SRCS EXCLUDE REGEX "_test.cpp")
 list (FILTER CPP_INDEX_SRCS EXCLUDE REGEX "_test.cpp")
 add_library (vsag SHARED ${CPP_SRCS} ${CPP_FACTORY_SRCS} ${CPP_INDEX_SRCS})
+add_library (vsag_static STATIC ${CPP_SRCS} ${CPP_FACTORY_SRCS} ${CPP_INDEX_SRCS})
 target_link_libraries (vsag diskann pthread m dl simd fmt::fmt-header-only)
+target_link_libraries (vsag_static diskann pthread m dl simd fmt::fmt-header-only)
 add_dependencies(vsag spdlog)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -fPIC -Werror=suggest-override")
