--- a/examples/cpp/CMakeLists.txt
+++ b/examples/cpp/CMakeLists.txt
@@ -5,4 +5,4 @@ add_executable (example_kmeans example_kmeans.cpp)
 target_link_libraries (example_kmeans vsag)
 
 add_executable (example_diskann example_diskann.cpp)
-target_link_libraries (example_diskann vsag)
+target_link_libraries (example_diskann vsag_static)
