PullRequest: 151 improve examples
Merge branch 'improve_examples of git@code.alipay.com:octopus/vsag.git into master

https://code.alipay.com/octopus/vsag/pull_requests/151


Signed-off-by: 贾玮 <jw94525@antgroup.com>
Signed-off-by: 余羡 <jinjiabao.jjb@antgroup.com>


* improve examples and cmake files

* update

* update

--- a/.aci.yml
+++ b/.aci.yml
@@ -66,12 +66,7 @@ vsag_build_ut_cov:
           export GTEST_OUTPUT="xml:$(pwd)/vsag/testresult/gtest/"
           bash scripts/deps/install_deps_centos.sh
           echo "install_deps finished at `date +'%Y-%m-%d %H:%M:%S'`"
-          make test_cov CASE="[ut]"
-          make test_cov CASE="[test]~[diskann]"
-          make test_cov CASE="[test][diskann][diskann-ci-part1]"
-          make test_cov CASE="[test][diskann][diskann-ci-part2]"
-          make test_cov CASE="[test][diskann][diskann-ci-part3]"
-          make test_cov CASE="[test][diskann][diskann-ci-part4]"
+          make test_cov
           echo "test_cov finished at `date +'%Y-%m-%d %H:%M:%S'`"
           bash scripts/aci/collect_cpp_coverage.sh
           echo "collect_coverage finished at `date +'%Y-%m-%d %H:%M:%S'`"
@@ -116,12 +111,7 @@ vsag_build_asan_ut:
           # compile
           export PATH=/usr/lib/ccache:$PATH
           export GTEST_OUTPUT="xml:$(pwd)/vsag/testresult/gtest/"
-          make test_asan CASE="[ut]"
-          make test_asan CASE="[test]~[diskann]"
-          make test_asan CASE="[test][diskann][diskann-ci-part1]"
-          make test_asan CASE="[test][diskann][diskann-ci-part2]"
-          make test_asan CASE="[test][diskann][diskann-ci-part3]"
-          make test_asan CASE="[test][diskann][diskann-ci-part4]"
+          make test_asan
           #
     - plugin: memcheck-log-parser
       inputs:
