--- a/examples/cpp/CMakeLists.txt
+++ b/examples/cpp/CMakeLists.txt
@@ -6,3 +6,6 @@ target_link_libraries (example_kmeans vsag)
 
 add_executable (example_diskann example_diskann.cpp)
 target_link_libraries (example_diskann vsag_static)
+
+add_executable (simple_hnsw simple_hnsw.cpp)
+target_link_libraries (simple_hnsw vsag_static)
