--- a/src/simd/CMakeLists.txt
+++ b/src/simd/CMakeLists.txt
@@ -2,52 +2,52 @@
 set (COMPILER_SUPPORTED "compiler support instructions: ")
 if (COMPILER_SSE_SUPPORTED)
   set (COMPILER_SUPPORTED "${COMPILER_SUPPORTED} SSE")
-endif()
+endif ()
 if (COMPILER_AVX_SUPPORTED)
   set (COMPILER_SUPPORTED "${COMPILER_SUPPORTED} AVX")
-endif()
+endif ()
 if (COMPILER_AVX2_SUPPORTED)
   set (COMPILER_SUPPORTED "${COMPILER_SUPPORTED} AVX2")
-endif()
+endif ()
 if (COMPILER_AVX512_SUPPORTED)
   set (COMPILER_SUPPORTED "${COMPILER_SUPPORTED} AVX512")
-endif()
+endif ()
 message (${COMPILER_SUPPORTED})
 
 set (RUNTIME_SUPPORTED "runtime support instructions: ")
 if (RUNTIME_SSE_SUPPORTED)
   set (RUNTIME_SUPPORTED "${RUNTIME_SUPPORTED} SSE")
-endif()
+endif ()
 if (RUNTIME_AVX_SUPPORTED)
   set (RUNTIME_SUPPORTED "${RUNTIME_SUPPORTED} AVX")
-endif()
+endif ()
 if (RUNTIME_AVX2_SUPPORTED)
   set (RUNTIME_SUPPORTED "${RUNTIME_SUPPORTED} AVX2")
-endif()
+endif ()
 if (RUNTIME_AVX512_SUPPORTED)
   set (RUNTIME_SUPPORTED "${RUNTIME_SUPPORTED} AVX512")
-endif()
+endif ()
 message (${RUNTIME_SUPPORTED})
 
 set (SIMD_SRCS generic.cpp simd.cpp)
 if (COMPILER_SSE_SUPPORTED)
   set (SIMD_SRCS ${SIMD_SRCS} sse.cpp)
   set_source_files_properties (sse.cpp PROPERTIES COMPILE_FLAGS "-msse -msse2 -msse3 -mssse3 -msse4 -msse4a -msse4.1 -msse4.2")
-  add_definitions(-DENABLE_SSE=1)
-endif()
+  add_definitions (-DENABLE_SSE=1)
+endif ()
 if (COMPILER_AVX_SUPPORTED)
   set (SIMD_SRCS ${SIMD_SRCS} avx.cpp)
   set_source_files_properties (avx.cpp PROPERTIES COMPILE_FLAGS "-mavx")
-  add_definitions(-DENABLE_AVX=1)
-endif()
+  add_definitions (-DENABLE_AVX=1)
+endif ()
 if (COMPILER_AVX2_SUPPORTED)
   #set_source_files_properties (avx.cpp PROPERTIES COMPILE_FLAGS "-mavx2 -mfma")
-endif()
+endif ()
 if (COMPILER_AVX512_SUPPORTED)
   set (SIMD_SRCS ${SIMD_SRCS} avx512.cpp)
   set_source_files_properties (avx512.cpp PROPERTIES COMPILE_FLAGS "-mavx512f -mavx512pf -mavx512er -mavx512cd -mavx512vl -mavx512bw -mavx512dq -mavx512ifma -mavx512vbmi")
-  add_definitions(-DENABLE_AVX512=1)
-endif()
+  add_definitions (-DENABLE_AVX512=1)
+endif ()
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ftree-vectorize")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-builtin-malloc")
@@ -59,4 +59,4 @@ set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -funroll-loops")
 
 add_library (simd ${SIMD_SRCS})
 
-target_link_libraries(simd PUBLIC cpuinfo)
+target_link_libraries (simd PRIVATE cpuinfo)
