PullRequest: 157 improve codes and comments
Merge branch 'improve_comments of git@code.alipay.com:octopus/vsag.git into master

https://code.alipay.com/octopus/vsag/pull_requests/157


Signed-off-by: 贾玮 <jw94525@antgroup.com>
Signed-off-by: 余羡 <jinjiabao.jjb@antgroup.com>


* improve comments

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,6 +118,10 @@ install (DIRECTORY include/
 	 DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
 install (TARGETS vsag
 	 LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}")
+install (TARGETS vsag_static
+	 LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}")
+install (TARGETS test_performance
+	 LIBRARY DESTINATION "${CMAKE_INSTALL_BINDIR}")
 
 # version
 find_package (Git)
