PullRequest: 164 fix install error while disable tests
Merge branch 'fix_install_error_while_disable_tests of git@code.alipay.com:octopus/vsag.git into master

https://code.alipay.com/octopus/vsag/pull_requests/164


Signed-off-by: 贾玮 <jw94525@antgroup.com>
Signed-off-by: 余羡 <jinjiabao.jjb@antgroup.com>


* fix install error while disable tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,8 +120,10 @@ install (TARGETS vsag
 	 LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}")
 install (TARGETS vsag_static
 	 LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}")
-install (TARGETS test_performance
-	 LIBRARY DESTINATION "${CMAKE_INSTALL_BINDIR}")
+if (ENABLE_TESTS)
+    install (TARGETS test_performance
+    	 LIBRARY DESTINATION "${CMAKE_INSTALL_BINDIR}")
+endif ()
 
 # version
 find_package (Git)
