PullRequest: 153 perform IO in batches when the io_limit is relatively large.
Merge branch fix-bug-reorder of git@code.alipay.com:octopus/vsag.git into master
https://code.alipay.com/octopus/vsag/pull_requests/153

Signed-off-by: 贾玮 <jw94525@antgroup.com>
Signed-off-by: 祥予 <wxy407827@antgroup.com>


* When using reorder mode, it supports performing IO in batches when the io_limit is relatively large.

* modiy

* modify

* modify

* modify

* modify

* modify

* modify

* modift

* modift

* modify

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,6 +88,7 @@ include (extern/catch2/catch2.cmake)
 include (extern/cpuinfo/cpuinfo.cmake)
 include (extern/fmt/fmt.cmake)
 include (extern/hdf5/hdf5.cmake)
+include (extern/thread_pool/thread_pool.cmake)
 
 include_directories (extern/hnswlib)
 include_directories (extern/faiss)
