PullRequest: 171 add intel-mkl as blas implementation
Merge branch 'add_intelmkl_as_blas_library of git@code.alipay.com:octopus/vsag.git into master

https://code.alipay.com/octopus/vsag/pull_requests/171


Signed-off-by: 贾玮 <jw94525@antgroup.com>
Signed-off-by: 余羡 <jinjiabao.jjb@antgroup.com>


* add intel-mkl as blas implementation

* update

--- a/.aci.yml
+++ b/.aci.yml
@@ -111,6 +111,7 @@ vsag_build_asan_ut:
           # compile
           export PATH=/usr/lib/ccache:$PATH
           export GTEST_OUTPUT="xml:$(pwd)/vsag/testresult/gtest/"
+          bash scripts/deps/install_deps_centos.sh
           make test_asan
           #
     - plugin: memcheck-log-parser
