--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,7 @@ include (extern/json/json.cmake)
 include (extern/boost/boost.cmake)
 include (extern/openblas/openblas.cmake)
 include (extern/aio/aio.cmake)
+include (extern/mkl/mkl.cmake)
 include (extern/diskann/diskann.cmake)
 include (extern/spdlog/spdlog.cmake)
 include (extern/catch2/catch2.cmake)
