PullRequest: 166 add delete for hnsw
Merge branch add-delete of git@code.alipay.com:octopus/vsag.git into master
https://code.alipay.com/octopus/vsag/pull_requests/166?tab=comment

Signed-off-by: 贾玮 <jw94525@antgroup.com>
Signed-off-by: 祥予 <wxy407827@antgroup.com>


* modify

* modify

* modify

* modify

* modify

* modify

* modify

* modify

* modify

* modify

* modify

* modify

* modify

* modify

* modify

* modify

* modify

* modify

--- a/examples/cpp/CMakeLists.txt
+++ b/examples/cpp/CMakeLists.txt
@@ -1,6 +1,9 @@
 add_executable (example_hnsw example_hnsw.cpp)
 target_link_libraries (example_hnsw vsag)
 
+add_executable (example_fresh_hnsw example_fresh_hnsw.cpp)
+target_link_libraries (example_fresh_hnsw vsag)
+
 add_executable (example_kmeans example_kmeans.cpp)
 target_link_libraries (example_kmeans vsag)
 
