--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,6 +4,18 @@ file (GLOB_RECURSE UNIT_TESTS "../src/*_test.cpp")
 add_executable (unittests ${UNIT_TESTS}
     fixtures/fixtures.cpp
 )
+if (COMPILER_SSE_SUPPORTED)
+  target_compile_definitions (unittests PRIVATE ENABLE_SSE=1)
+endif ()
+if (COMPILER_AVX_SUPPORTED)
+  target_compile_definitions (unittests PRIVATE ENABLE_AVX=1)
+endif ()
+if (COMPILER_AVX2_SUPPORTED)
+  target_compile_definitions (unittests PRIVATE ENABLE_AVX2=1)
+endif ()
+if (COMPILER_AVX512_SUPPORTED)
+  target_compile_definitions (unittests PRIVATE ENABLE_AVX512=1)
+endif ()
 target_include_directories (unittests PRIVATE "./fixtures")
 target_link_libraries (unittests PRIVATE Catch2::Catch2WithMain vsag simd)
 add_dependencies (unittests spdlog Catch2)
