--- a/.aci.yml
+++ b/.aci.yml
@@ -11,9 +11,8 @@ only:
       - ^master$
 
 parameters:
-  image: reg.docker.alibaba-inc.com/tbase/tbase:dev-20230605-clang13
-  image_gcc: reg.docker.alibaba-inc.com/tbase/tbase:dev-20230605-gcc10
-  image_vsag: reg.docker.alibaba-inc.com/tbase/tbase:dev-20240415-vsag
+  image_clang17: reg.docker.alibaba-inc.com/tbase/tbase:dev-20240529-1-clang17
+  image_clang11: reg.docker.alibaba-inc.com/tbase/tbase:dev-20240529-1-clang11
 
 stages:
   - FORMAT-PRE-CHECK
@@ -27,7 +26,7 @@ format-pre-check:
     - plugin: clone
     - plugin: shell
       inputs:
-        image: ${image}
+        image: ${image_clang17}
         command:
         - |
           make fmt
@@ -35,10 +34,8 @@ format-pre-check:
               exit 1
           fi
 
-vsag_build_cov_ut:
+vsag_build_clang11_ut:
   stage: BUILD_UT
-  checkRule:
-    - (CHANGE_LINE_NUMBER <= 10 && diffCoverage > 80) || (CHANGE_LINE_NUMBER > 10 && diffCoverage > 90)
   agent:
     #resourceClass: S #2C4G
     #resourceClass: M #4C8G
@@ -47,7 +44,49 @@ vsag_build_cov_ut:
     # - plugin: clone
     - plugin: shell
       inputs:
-        image: ${image_vsag}
+        image: ${image_clang11}
+        command:
+        - |
+          echo "clone source codes..."
+          git clone http://ice_test:${ACI_VAR_ICE_CODE_PASSWORD}@gitlab.alipay-inc.com/octopus/vsag.git
+          cd vsag
+          git checkout ${ACI_COMMIT_REF_NAME}
+          git fetch --tags
+          #
+          echo "running unittests..."
+          osscmd config --host=${OSS_HOST} --id=${OSS_ACCESS_KEY_ID} --key=${OSS_ACCESS_KEY_SECRET}
+          #
+          # download ccache
+          bash scripts/misc/ccache.sh
+          #
+          # compile
+          export PATH=/usr/lib/ccache:$PATH
+          export GTEST_OUTPUT="xml:$(pwd)/vsag/testresult/gtest/"
+          bash scripts/deps/install_deps_centos.sh
+          echo "install_deps finished at `date +'%Y-%m-%d %H:%M:%S'`"
+          make test CASE="[ut]"
+          echo "test finished at `date +'%Y-%m-%d %H:%M:%S'`"
+  publisher:
+    archiveArtifacts:
+      artifacts: 'vsag/testresult/'
+      allowEmptyArchive: true
+    junit:
+      testResults: 'vsag/testresult/gtest/TEST-*.xml'
+      allowEmptyResults: true
+  timeout: 60
+  allowFailure: false
+
+vsag_build_cov_ut:
+  stage: BUILD_UT
+  agent:
+    #resourceClass: S #2C4G
+    #resourceClass: M #4C8G
+    resourceClass: L #8C16G
+  steps:
+    # - plugin: clone
+    - plugin: shell
+      inputs:
+        image: ${image_clang17}
         command:
         - |
           echo "clone source codes..."
@@ -86,8 +125,6 @@ vsag_build_cov_ut:
 
 vsag_build_cov_ft_shard0:
   stage: BUILD_UT
-  checkRule:
-    - (CHANGE_LINE_NUMBER <= 10 && diffCoverage > 80) || (CHANGE_LINE_NUMBER > 10 && diffCoverage > 90)
   agent:
     #resourceClass: S #2C4G
     #resourceClass: M #4C8G
@@ -96,7 +133,7 @@ vsag_build_cov_ft_shard0:
     # - plugin: clone
     - plugin: shell
       inputs:
-        image: ${image_vsag}
+        image: ${image_clang17}
         command:
         - |
           echo "clone source codes..."
@@ -135,8 +172,6 @@ vsag_build_cov_ft_shard0:
 
 vsag_build_cov_ft_shard1:
   stage: BUILD_UT
-  checkRule:
-    - (CHANGE_LINE_NUMBER <= 10 && diffCoverage > 80) || (CHANGE_LINE_NUMBER > 10 && diffCoverage > 90)
   agent:
     #resourceClass: S #2C4G
     #resourceClass: M #4C8G
@@ -145,7 +180,7 @@ vsag_build_cov_ft_shard1:
     # - plugin: clone
     - plugin: shell
       inputs:
-        image: ${image_vsag}
+        image: ${image_clang17}
         command:
         - |
           echo "clone source codes..."
@@ -192,7 +227,7 @@ vsag_build_asan_ut:
     # - plugin: clone
     - plugin: shell
       inputs:
-        image: ${image_vsag}
+        image: ${image_clang17}
         command:
         - |
           echo "clone source codes..."
@@ -240,7 +275,7 @@ vsag_build_asan_ft_shard0:
     # - plugin: clone
     - plugin: shell
       inputs:
-        image: ${image_vsag}
+        image: ${image_clang17}
         command:
         - |
           echo "clone source codes..."
@@ -288,7 +323,7 @@ vsag_build_asan_ft_shard1:
     # - plugin: clone
     - plugin: shell
       inputs:
-        image: ${image_vsag}
+        image: ${image_clang17}
         command:
         - |
           echo "clone source codes..."
