--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,19 +5,10 @@ endif()
 
 project (VSAG
   VERSION 0.9.0
-  LANGUAGES CXX
+  LANGUAGES C CXX
 )
 
-set (CMAKE_CXX_STANDARD 17)
 message ("CPU ARCH: ${CMAKE_HOST_SYSTEM_PROCESSOR}")
-
-# debug or release
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -fPIC -Werror=suggest-override")
-if (CMAKE_BUILD_TYPE STREQUAL "Debug")
-  set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0")
-elseif (CMAKE_BUILD_TYPE STREQUAL "Release")
-  set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast")
-endif ()
 
 # options
 option (ENABLE_JEMALLOC "Whether to link jemalloc to all executables" OFF)
@@ -32,6 +23,16 @@ option (ENABLE_CCACHE "Whether to open ccache" OFF)
 option (ENABLE_COVERAGE "Enable gcov (debug, Linux builds only)" OFF)
 option (ENABLE_INTEL_MKL "Enable intel-mkl (x86 platform only)" ON)
 
+if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+    if (CMAKE_CXX_COMPILER_VERSION VERSION_EQUAL 17 OR CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 17)
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -gdwarf-4")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++ -gdwarf-4 -Wno-deprecated-builtins")
+        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fuse-ld=lld -static-libstdc++ -Wl,-rpath,/opt/alibaba-cloud-compiler/lib64")
+        set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_EXE_CMAKE_SHARED_LINKER_FLAGSLINKER_FLAGS} -static-libstdc++ -Wl,-rpath,/opt/alibaba-cloud-compiler/lib64")
+        set(CMAKE_CXX_STANDARD_LIBRARIES "${CMAKE_CXX_STANDARD_LIBRARIES} /opt/alibaba-cloud-compiler/lib64/libc++.a /opt/alibaba-cloud-compiler/lib64/libc++abi.a")
+    endif()
+endif()
+
 # ccache
 find_program (CCACHE_FOUND ccache)
 if (CCACHE_FOUND AND ENABLE_CCACHE)
@@ -39,6 +40,100 @@ if (CCACHE_FOUND AND ENABLE_CCACHE)
  set_property (GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache)
  set_property (GLOBAL PROPERTY RULE_LAUNCH_LINK ccache)
 endif ()
+
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
+set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
+
+set(ld_flags
+    "-L${CMAKE_INSTALL_PREFIX}/lib"
+    "-L${CMAKE_INSTALL_PREFIX}/lib64"
+)
+if (EXISTS "/usr/lib/${CMAKE_LIBRARY_ARCHITECTURE}")
+    set(ld_flags
+        "${ld_flags}"
+        "-L/usr/lib/${CMAKE_LIBRARY_ARCHITECTURE}"
+    )
+endif()
+if (EXISTS "/usr/lib64/${CMAKE_LIBRARY_ARCHITECTURE}")
+    set(ld_flags
+        "${ld_flags}"
+        "-L/usr/lib64/${CMAKE_LIBRARY_ARCHITECTURE}"
+    )
+endif()
+if (EXISTS "/opt/alibaba-cloud-compiler/lib64/")
+    set(ld_flags
+        "${ld_flags}"
+        "-L/opt/alibaba-cloud-compiler/lib64/"
+    )
+endif()
+string(JOIN " " ld_flags ${ld_flags})
+
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
+set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
+
+set(common_cmake_args
+    "-DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}"
+    "-DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}"
+    "-DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}"
+    "-DCMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS} -fno-omit-frame-pointer -fPIC -gdwarf-4 "
+    "-DCMAKE_C_FLAGS=${CMAKE_C_FLAGS} -fno-omit-frame-pointer -fPIC -gdwarf-4 "
+    "-DCMAKE_EXE_LINKER_FLAGS=${extra_link_libs}"
+    "-DCMAKE_SHARED_LINKER_FLAGS=${extra_link_libs}"
+    "-DCMAKE_INCLUDE_PATH=${CMAKE_INSTALL_PREFIX}/include"
+    "-DCMAKE_LIBRARY_PATH=${CMAKE_INSTALL_PREFIX}/lib:/opt/alibaba-cloud-compiler/lib64"
+)
+
+set(common_configure_envs
+    "env"
+    "CC=${CMAKE_C_COMPILER}"
+    "CXX=${CMAKE_CXX_COMPILER}"
+    "CFLAGS=${CMAKE_C_FLAGS} -fno-omit-frame-pointer -fPIC -O2 -D_DEFAULT_SOURCE -D_GNU_SOURCE -gdwarf-4"
+    "CXXFLAGS=${CMAKE_CXX_FLAGS} -fno-omit-frame-pointer -fPIC -O2 -D_DEFAULT_SOURCE -D_GNU_SOURCE -gdwarf-4"
+    "CPPFLAGS=-isystem ${CMAKE_INSTALL_PREFIX}/include"
+    "LDFLAGS=-Wl,-rpath=\\\\$\\$ORIGIN ${ld_flags}"
+    "PATH=${BUILDING_PATH}:$ENV{PATH}"
+    "ACLOCAL_PATH=${ACLOCAL_PATH}"
+)
+
+# thirdparties
+include (cmake/CheckSIMDCompilerFlag.cmake)
+include (ExternalProject)
+include (extern/json/json.cmake)
+include (extern/boost/boost.cmake)
+include (extern/openblas/openblas.cmake)
+include (extern/aio/aio.cmake)
+include (extern/mkl/mkl.cmake)
+include (extern/diskann/diskann.cmake)
+include (extern/spdlog/spdlog.cmake)
+include (extern/catch2/catch2.cmake)
+include (extern/cpuinfo/cpuinfo.cmake)
+include (extern/fmt/fmt.cmake)
+include (extern/hdf5/hdf5.cmake)
+include (extern/thread_pool/thread_pool.cmake)
+
+include_directories (extern/hnswlib)
+include_directories (${CMAKE_CURRENT_BINARY_DIR}/spdlog/install/include)
+include_directories (include)
+
+set (CMAKE_CXX_STANDARD 17)
+
+if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+    if (CMAKE_CXX_COMPILER_VERSION VERSION_EQUAL 17 OR CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 17)
+        set (CMAKE_CXX_STANDARD 20)
+    endif()
+endif()
+
+# debug or release
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -Werror=suggest-override")
+if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+  set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0")
+elseif (CMAKE_BUILD_TYPE STREQUAL "Release")
+  set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast")
+endif ()
+
+if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-incompatible-pointer-types-discards-qualifiers")
+endif()
 
 # coverage
 if (ENABLE_COVERAGE AND NOT WIN32 AND NOT APPLE)
@@ -72,30 +167,6 @@ if (ENABLE_TSAN)
     add_compile_options (-g)
     set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=thread")
 endif ()
-
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
-set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
-
-# thirdparties
-include (cmake/CheckSIMDCompilerFlag.cmake)
-include (ExternalProject)
-include (extern/json/json.cmake)
-include (extern/boost/boost.cmake)
-include (extern/openblas/openblas.cmake)
-include (extern/aio/aio.cmake)
-include (extern/mkl/mkl.cmake)
-include (extern/diskann/diskann.cmake)
-include (extern/spdlog/spdlog.cmake)
-include (extern/catch2/catch2.cmake)
-include (extern/cpuinfo/cpuinfo.cmake)
-include (extern/fmt/fmt.cmake)
-include (extern/hdf5/hdf5.cmake)
-include (extern/thread_pool/thread_pool.cmake)
-
-include_directories (extern/hnswlib)
-include_directories (extern/faiss)
-include_directories (${CMAKE_CURRENT_BINARY_DIR}/spdlog/install/include)
-include_directories (include)
 
 # sources
 add_subdirectory (src)
